Fix account component overflow behavior

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -7831,6 +7831,10 @@ noscript {
   }
 }
 
+.account__contents {
+  overflow: hidden;
+}
+
 .verified-badge {
   display: inline-flex;
   align-items: center;
